# BootISO

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  build_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  iso.rs  lib.rs  main.rs  usb.rs  windows_iso.rs  writer.rs
src/components/: BasicMode.css  BasicMode.tsx  ExpertMode.css  ExpertMode.tsx  FlashButton.css  FlashButton.tsx  Header.css  Header.tsx  IsoSelector.css  IsoSelector.tsx  ModeSwitch.css  ModeSwitch.tsx  ProgressBar.css  ProgressBar.tsx  StatusLog.css  StatusLog.tsx  UsbSelector.css  UsbSelector.tsx
src/styles/: global.css
src/types/: index.ts
