[package]
name = "bootiso"
version = "0.1.0"
description = "BootISO - Cross-platform ISO to USB flasher"
authors = ["ZipName"]
edition = "2021"

[lib]
name = "bootiso_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
winapi = { version = "0.3.9", features = ["winioctl", "fileapi", "winnt", "handleapi", "errhandlingapi"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
] }
widestring = "1"

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
